[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/Sign.gd" type="Script" id=1]
[ext_resource path="res://Art/Tiles/Sign.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/Sign Dialogue Box.png" type="Texture" id=3]
[ext_resource path="res://Fonts/IndieFlower-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 30 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="Sign" type="Area2D"]
z_index = -2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
text = "Hello, wanderer!"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( -20, -90 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="."]
margin_left = -140.0
margin_top = -95.0
margin_right = 140.0
margin_bottom = -51.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
autowrap = true

[node name="Fade" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="." to="." method="_on_Dialogue_node_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dialogue_node_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
